# audiobook-ish

./: .gitignore  PLAN.md  README.md  context.md  pyproject.toml
audiobook_ish/: __init__.py  chapters.py  combine.py  extract.py  manifest.py  package.py  player_bundle.py  render.py  synthesize.py
audiobook_ish/cli/: __main__.py
legacy/: README.md  crime-and-punishment-cleaned.txt  generate_audiobook.py
player/: index.html  player.css  player.js
tests/: conftest.py  test_chapters.py  test_cli.py  test_combine.py  test_extract.py  test_manifest_and_player_bundle.py  test_package.py  test_render.py  test_synthesize.py
