[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audiobook-ish"
version = "0.1.0"
description = "Generate page-synced audiobooks from PDFs using Kokoro TTS. Speechify, but not really."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Audiobook-ish contributors" }]
keywords = ["audiobook", "tts", "kokoro", "pdf", "speech-synthesis"]

dependencies = [
    "pymupdf>=1.24",
    "pymupdf4llm>=0.0.10",
    "kokoro>=0.7",
    "soundfile>=0.12",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[project.scripts]
audiobook-ish = "audiobook_ish.cli.__main__:main"

[tool.setuptools.packages.find]
include = ["audiobook_ish*"]
exclude = ["legacy*", "tests*", "examples*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
